--- a/anchorwaveplots.Rmd
+++ b/anchorwaveplots.Rmd
@@ -57,13 +57,13 @@ anchors_mb<- anchors_mut %>% mutate(queryMb = queryStart/1e6) %>% mutate(referen
 ```{r, fig.width=14, fig.height=10}
 a1<- anchors_mb %>% filter(newChr=="A1") %>% 
     mutate(newstartMb=queryMb) %>%
-    ggplot(aes(referenceMb,newstartMb)) + geom_point() + theme_classic()+
+    ggplot(aes(referenceMb,newstartMb)) + geom_point() + theme_classic() +
     theme(axis.title=element_blank())
 ## need to transform A2, A4 and Y so that plots are in same orientation
 
 a2<-anchors_mb %>% filter(newChr=="A2") %>%
   mutate(newstartMb=(max(queryMb) - queryMb)) %>%
-  ggplot(aes(referenceMb,newstartMb)) + geom_point() + theme_classic()
+  ggplot(aes(referenceMb,newstartMb)) + geom_point() + theme_classic() +
   theme(axis.title=element_blank())
 
 a4<-anchors_mb %>% filter(newChr=="A4") %>%
@@ -79,15 +79,15 @@ y<-anchors_mb %>% filter(newChr=="Y") %>%
   geom_vline(xintercept = 71,linetype = 'dashed') +
   geom_vline(xintercept = 261,linetype = 'dashed') +
   geom_vline(xintercept = 367,linetype = 'dashed') +
-  annotate("text", x = .35*(71), y = 400, label = "PAR1") +
-  annotate("text", x = .5*(71+261), y = 400, label = "Old sex-linked\n region") +
-  annotate("text", x = .5*(261+367), y = 400, label = "New sex-linked\n region") +
-  annotate("text", x = .5*(367+500), y = 400, label = "PAR2") +
+  annotate("text", x = .35*(71), y = 400, label = "PAR1",size=5) +
+  annotate("text", x = .5*(71+261), y = 400, label = "Old sex-linked\n region",size =5) +
+  annotate("text", x = .5*(261+367), y = 400, label = "New\n sex-linked\n region",size=5) +
+  annotate("text", x = .5*(367+500), y = 400, label = "PAR2",size=5) +
   ylim(0,430) +
   theme_classic() +
   theme(legend.position = c(0.9,0.3),axis.title=element_blank()) +
   scale_color_manual(name="",
-                    labels=c("old Y","neo Y"),
+                    labels=c("Y1","Y2"),
                      values = pubColours[c(1,4)])
   
 y
@@ -98,14 +98,14 @@ myplot<-plot_grid(a1,a2,a4,y, labels = c(" A1",
           label_x=0.07,label_size=12,hjust=-0.3)
 #create common x and y labels
 
-y.grob <- textGrob("Maternal Haplotype\nposition(Mb)",gp=gpar(fontface="bold", fontsize=12), rot=90)
+y.grob <- textGrob("Maternal Haplotype\nposition(Mb)",gp=gpar(fontface="bold", fontsize=18), rot=90)
 
-x.grob <- textGrob("Paternal Haplotype\nposition(Mb)",gp=gpar(fontface="bold", fontsize=12))
+x.grob <- textGrob("Paternal Haplotype\nposition(Mb)",gp=gpar(fontface="bold", fontsize=18))
 
 #add to plot
 labeledplot<-grid.arrange(arrangeGrob(myplot, left = y.grob, bottom = x.grob))
 # save as tiff (raster, lossless, good for publication apparently?)
-ggsave(plot=labeledplot,"draft3_dotplot.tiff",width=14,height=10,dpi="print",device="tiff")
+ggsave(plot=labeledplot,"draft4_dotplot.tiff",width=14,height=10,dpi="print",device="tiff")
 ```
 
 
